# some-rust-scripts

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  justfile
.github/ISSUE_TEMPLATE/: bug_report.md
aspect-ratio/: Cargo.toml  Makefile  README.md  justfile
aspect-ratio/src/: main.rs
clop-clone/: Cargo.toml
clop-clone/src/: main.rs
clop_utils/: Cargo.toml
clop_utils/src/: main.rs
close-eyes/: Cargo.toml
close-eyes/src/: config.rs  main.rs  timer.rs  ui.rs
count-characters/: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  justfile
count-characters/src/: main.rs
cye/: package.json  text.txt
cye/src/: index.html  styles.css
cye/src-tauri/: Cargo.toml  tauri.conf.json
cye/src-tauri/src/: lib.rs  main.rs
git-send/: Cargo.toml  LICENSE-APACHE  README.md  TODO.md  cargofmt.toml  justfile
git-send/src/: app.rs  cli.rs  config.rs  errors.rs  git_ops.rs  main.rs
gitflow/: .gitignore  Cargo.toml
gitflow/src/: main.rs
gitflow/src/commands/: bugfix.rs  config.rs  feature.rs  hotfix.rs  init.rs  log.rs  mod.rs  release.rs  support.rs
gitflow/src/config/: mod.rs
gitflow/src/git/: mod.rs
githubflow/: Cargo.toml
hut-utils/: Cargo.toml  README.md  justfile  test3.haha
hut-utils/src/: hut.rs  main.rs  paste.rs  utils.rs
jserver/: Cargo.toml
jserver/src/: main.rs
json-compare-cli/: Cargo.toml  README.md  justfile  test_1.json
json-compare-cli/src/: main.rs
load_balancer/: Cargo.toml
load_balancer/src/: main.rs
nvim-plugins/: Cargo.toml
nvim-plugins/.cargo/: config.toml
nvim-plugins/src/: lib.rs
password-generator/: Cargo.toml  rustfmt.toml
password-generator/src/: main.rs
progressive-pomodoro/: Cargo.toml  haha.md  haha.toml
progressive-pomodoro/src/: main.rs
rentry/: Cargo.toml  LICENSE  test.txt
rentry/src/: main.rs
rest-eye/: justfile  package.json
rest-eye/src/: App.tsx
rest-eye/src-tauri/: Cargo.toml  tauri.conf.json
rest-eye/src-tauri/src/: main.rs
roguelike/: Cargo.toml
roguelike/src/: main.rs
rpaste/: Cargo.toml  README.md  test.tmp
rpaste/src/: main.rs
rustlings-old/: .gitignore  Cargo.toml
rustlings-old/exercises/: README.md
rustlings-old/exercises/00_intro/: intro2.rs
rustlings-old/exercises/01_variables/: variables1.rs  variables2.rs  variables3.rs  variables4.rs  variables5.rs  variables6.rs
rustlings-old/exercises/02_functions/: functions1.rs  functions2.rs  functions3.rs  functions4.rs  functions5.rs
rustlings-old/exercises/03_if/: if1.rs  if2.rs  if3.rs
rustlings-old/exercises/04_primitive_types/: primitive_types1.rs  primitive_types2.rs  primitive_types3.rs  primitive_types4.rs  primitive_types5.rs  primitive_types6.rs
rustlings-old/exercises/05_vecs/: vecs1.rs  vecs2.rs
rustlings-old/exercises/06_move_semantics/: move_semantics1.rs  move_semantics2.rs  move_semantics3.rs  move_semantics4.rs  move_semantics5.rs
rustlings-old/exercises/07_structs/: structs1.rs  structs2.rs  structs3.rs
rustlings-old/exercises/08_enums/: enums1.rs  enums2.rs  enums3.rs
rustlings-old/exercises/22_clippy/: clippy3.rs
rustlings-old/exercises/quizzes/: quiz1.rs
rustlings-old/solutions/00_intro/: intro2.rs
rustlings-old/solutions/05_vecs/: vecs2.rs
rustlings-old/solutions/09_strings/: strings1.rs  strings2.rs  strings3.rs  strings4.rs
rustlings-old/solutions/10_modules/: modules1.rs  modules2.rs  modules3.rs
rustlings-old/solutions/11_hashmaps/: hashmaps1.rs  hashmaps2.rs  hashmaps3.rs
rustlings-old/solutions/12_options/: options1.rs  options2.rs  options3.rs
rustlings-old/solutions/13_error_handling/: errors1.rs  errors2.rs  errors3.rs  errors4.rs  errors5.rs  errors6.rs
rustlings-old/solutions/14_generics/: generics1.rs  generics2.rs
rustlings-old/solutions/15_traits/: traits1.rs  traits2.rs  traits3.rs  traits4.rs  traits5.rs
rustlings-old/solutions/16_lifetimes/: lifetimes1.rs  lifetimes2.rs  lifetimes3.rs
rustlings-old/solutions/17_tests/: tests1.rs  tests2.rs  tests3.rs
rustlings-old/solutions/18_iterators/: iterators1.rs  iterators2.rs  iterators3.rs  iterators4.rs  iterators5.rs
rustlings-old/solutions/19_smart_pointers/: arc1.rs  box1.rs  cow1.rs  rc1.rs
rustlings-old/solutions/20_threads/: threads1.rs  threads2.rs  threads3.rs
rustlings-old/solutions/21_macros/: macros1.rs  macros2.rs  macros3.rs  macros4.rs
rustlings-old/solutions/22_clippy/: clippy1.rs  clippy2.rs  clippy3.rs
rustlings-old/solutions/23_conversions/: as_ref_mut.rs  from_into.rs  from_str.rs  try_from_into.rs  using_as.rs
rustlings-old/solutions/quizzes/: quiz2.rs  quiz3.rs
search-libraries/: .gitignore  Cargo.toml  README.md  justfile
search-libraries/.github/workflows/: rust.yaml
search-libraries/src/: main.rs
test-load-balancer/: Cargo.toml
test-load-balancer/src/: main.rs
tmp/: count-characters  json-compare-cli
todo-cli/: Cargo.toml
todo-cli/src/: main.rs
todo-tui/: Cargo.toml
todo-tui/src/: main.rs
wallabag-cli/: Cargo.toml
wallabag-cli/src/: config.rs  main.rs  mod.rs  utils.rs  wallabag.rs
whatsyoursign/: Cargo.toml  LICENSE  README.md  TODO.md
whatsyoursign/.cursor/rules/: rust.mdc
whatsyoursign/outputs/: current-alfred.txt  current-tldr.txt
whatsyoursign/src/: main.rs
xffetch/: Cargo.toml  justfile
xffetch/src/: display.rs  main.rs  output.rs  system.rs  types.rs  utils.rs
xffetch/src/detection/: cursor.rs
