[package]
  name = "aspect-ratio-cli"
  version = "0.1.3"
  edition = "2021"
  authors = ["anhkhoakz"]
  description = "A simple Rust library to calculate aspect ratio"
  license = "GPL-2.0"
  readme = "README.md"
  homepage = "https://github.com/anhkhoakz/some-rust-scripts/tree/main/aspect-ratio"
  repository = "https://github.com/anhkhoakz/some-rust-scripts/tree/main/aspect-ratio"
  keywords = ["aspect-ratio", "rust", "cli"]
  categories = ["command-line-utilities"]

[dependencies]
  clap = { version = "4.5.37", features = ["derive"] }
  clap_complete = "4.5.48"

[profile.release]
  opt-level = "z"
  lto = true
  codegen-units = 1
  panic = "abort"
  strip = true
