[package]
  name = "aspect-ratio-cli"
  version = "0.1.2"
  edition = "2021"
  authors = ["anhkhoakz"]
  description = "A simple Rust library to calculate aspect ratio"
  license = "GPL-2.0"
  readme = "README.md"
  homepage = "https://github.com/anhkhoakz/some-rust-scripts/tree/main/aspect-ratio"
  repository = "https://github.com/anhkhoakz/some-rust-scripts/tree/main/aspect-ratio"
  keywords = ["aspect-ratio", "rust", "cli"]
  categories = ["command-line-utilities"]
  exclude = [
    "target",
    "Cargo.lock",
    "README.md",
    ".gitignore",
    ".vscode",
    ".idea",
    "examples",
    "tests",
  ]

[dependencies]
  clap = { version = "4.5.37", features = ["derive"] }
