[package]
name = "clop_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
tree_magic_mini = "3.1.6"
which = "8.0.0"


[profile.release]
        opt-level = "z"
        lto = true
        codegen-units = 1
        panic = "abort"
        strip = true
        debug = false
        incremental = false
        overflow-checks = false
        rpath = false
