[package]
  name = "count-characters"
  description = "A simple Rust program to count characters in a string"
  version = "0.1.2"
  edition = "2021"
  authors = ["anhkhoakz"]
  license = "GPL-2.0"
  readme = "README.md"
  homepage = "https://github.com/anhkhoakz/some-rust-scripts/tree/main/count-characters"
  repository = "https://github.com/anhkhoakz/some-rust-scripts/tree/main/count-characters"
  keywords = ["rust", "count", "characters", "cli"]
  categories = ["command-line-utilities"]

[dependencies]
  clap = { version = "4.5.37", features = ["derive"] }
