[package]
    name = "gitflow"
    version = "0.1.0"
    edition = "2021"
    authors = ["Your Name <your.email@example.com>"]
    description = "A Rust implementation of git-flow (AVH Edition)"

[dependencies]
    clap = { version = "4.4", features = ["derive"] }
    git2 = "0.20"
    anyhow = "1.0"
    thiserror = "2.0.12"
    serde = { version = "1.0", features = ["derive"] }
    serde_json = "1.0"
