[package]
        name = "best-escape"
        version = "0.1.0"
        edition = "2024"

[dependencies]
        nvim-oxi = { version = "0.6.0", features = ["neovim-0-11", "libuv"] }
        once_cell = "1.21.3"
        parking_lot = "0.12.5"
        serde = { version = "1.0.228", features = ["derive"] }
        serde_json = "1.0.145"
[lib]
        crate-type = ["cdylib"]
