[package]
  name = "progressive-pomodoro"
  version = "0.1.0"
  edition = "2024"
  authors = ["anhkhoakz"]
  description = "A simple CLI tool to help you manage your time using the progressive Pomodoro technique."
  license = "GPL-2.0"
  homepage = "https://github.com/anhkhoakz/some-rust-scripts/tree/main/progressive-pomodoro"
  repository = "https://github.com/anhkhoakz/some-rust-scripts/tree/main/progressive-pomodoro"
  keywords = ["progressive-pomodoro", "rust", "cli"]
  categories = ["command-line-utilities"]

[dependencies]
  clap = { version = "4.5.37", features = ["derive"] }
  csv = "1.3.1"
  ctrlc = "3.4.6"
  notify-rust = "4.11.7"
