[package]
    name = "rentry"
    version = "0.1.0"
    edition = "2024"

[dependencies]
    clap = { version = "4.5.39", features = ["derive"] }
    reqwest = { version = "0.12.18", features = ["json"] }
    serde_json = "1.0.140"
    thiserror = "2.0.12"
    tokio = { version = "1.45.1", features = ["full"] }
    url = "2.5.4"
