[package]
    name = "rpaste"
    version = "0.1.0"
    edition = "2024"

[dependencies]
    atty = "0.2.14"
    base64 = "0.22.1"
    clap = { version = "4.5.39", features = ["derive"] }
    flate2 = "1.1.1"
    mime_guess = "2.0.5"
    rand = "0.9.1"
    reqwest = { version = "0.12.18", features = ["blocking", "json"] }
    ring = "0.17.14"
    serde = { version = "1.0.219", features = ["derive"] }
    serde_json = "1.0.140"
syntect = "5.2.0"
