[package]
        name = "todo-tui"
        version = "0.1.0"
        edition = "2024"

[dependencies]
        crossterm = "0.29.0"
        dirs = "6.0.0"
        ratatui = "0.29.0"
[dependencies.clap]
        version = "4.5.39"
        features = ["derive"]
[dependencies.sqlx]
        version = "0.8.6"
        features = ["runtime-tokio-rustls", "sqlite", "migrate"]
[dependencies.tokio]
        version = "1.45.1"
        features = ["full"]

[profile.release]
        opt-level = "z"
        lto = true
        codegen-units = 1
        panic = "abort"
        strip = true
