[package]
  name = "wallabag-cli"
  version = "0.1.0"
  edition = "2024"

[dependencies]
colored = "3.0.0"
  dirs = "6.0.0"
  reqwest = "0.12.15"
  serde_json = "1.0.140"

[dependencies.clap]
  version = "4.5.37"
  features = ["derive"]

[dependencies.tokio]
  version = "1.44.2"
  features = ["full"]
[dependencies.serde]
  version = "1.0.219"
  features = ["derive"]
